# rusty-grpc

client/: Cargo.toml
server/: Cargo.toml
