[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "*"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic = "*"

[build-dependencies]
tonic-build = "*"
